--- a/style.css
+++ b/style.css
@@ -1,3 +1,47 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Segoe UI', sans-serif;
+  color: #333;
+  padding: 16px;
+}
+
+.h1 {
+  font-size: 1.8rem;
+  text-align: center;
+}
+
+/* Description */
+.description {
+  margin: 24px 0;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* footer */
 
 footer {
