--- a/style.css
+++ b/style.css
@@ -324,3 +324,42 @@ img {
 .h1-customer-review {
     margin-bottom: 20px;
 }
+
+/* Review */
+
+.review {
+    width: 593px;
+    height: 588px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.h2-review {
+    color: black;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-weight: 100;
+}
+
+.big-box-review {
+    background-color: #A6A6A6;
+    width: 180px;
+    height: 550px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.small-box-review {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.img-review {
+    width: 130px;
+    height: 140px;
+}
