--- a/style.css
+++ b/style.css
@@ -339,7 +339,6 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
     padding: 10px;
 }
 
@@ -462,14 +461,41 @@ textarea {
 }
 
 @media screen and (min-width: 650px){
-  .image-office-building {
-    width: 100%;
-  }
-  form {
-    width: 20%
-  }
-  hr {
-    width: 50%;
-    margin: 20px auto;
-  }
+    .image-office-building {
+      width: 100%;
+    }
+
+    form {
+      width: 20%
+    }
+
+    hr {
+      width: 50%;
+      margin: 20px auto;
+    }
+    
+    .customer-review {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: space-around;
+      height: 600px;
+      margin: 80px;
+    }
+
+    .h1-customer-review {
+      width: 350px;
+    }
+
+    .customer-review-text {
+      width: 300px;
+      font-size: 20px;
+    }
+
+    .image-section-customer-review {
+      width: 700px;
+    }
+
+    .image-customer-review{
+      height: 400px ;
+    }
 }
