--- a/main.css
+++ b/main.css
@@ -1,1 +1,215 @@
-/*# sourceMappingURL=main.css.map */
+/* Contact information */
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+}
+
+.image-contact {
+  width: 40%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.text-contact {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.text-contact p {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+/* Office building */
+.office-building {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  font-size: 25px;
+  padding: 30px;
+}
+
+.image-office-building {
+  width: 100vw;
+  height: auto;
+  display: block;
+}
+
+/* Form */
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 50%;
+  margin: 60px auto;
+  padding: 20px;
+  border: 2px solid black;
+}
+
+.h2-contact {
+  text-align: center;
+  margin-top: 30px;
+}
+
+input {
+  height: 40px;
+}
+
+select {
+  height: 40px;
+}
+
+textarea {
+  height: 80px;
+}
+
+.submit-contact {
+  background-color: #3366ff;
+  border: none;
+  color: white;
+  width: 50%;
+  height: 50px;
+  font-size: 20px;
+  font-family: "Arial, sans-serif";
+}
+
+@media screen and (min-width: 650px) {
+  .image-office-building {
+    width: 100%;
+  }
+  form {
+    width: 20%;
+  }
+  hr {
+    width: 50%;
+    margin: 20px auto;
+  }
+}
+/* reference */
+.customer-review {
+  background-color: #cccccc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 70px;
+  font-family: "Arial, sans-serif";
+}
+
+.image-section-customer-review {
+  display: flex;
+}
+
+.image-customer-review {
+  width: 40%;
+  height: 140px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.image-customer-review {
+  width: 40%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.h1-customer-review {
+  margin-top: 50px;
+  margin-bottom: 40px;
+  font-weight: 100;
+}
+
+.customer-review-text {
+  color: white;
+  font-weight: 100;
+  line-height: 130%;
+  width: 55%;
+}
+
+/* Review */
+.review {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+.h2-review {
+  color: black;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-weight: 100;
+}
+
+.big-box-review {
+  background-color: #A6A6A6;
+  width: 80%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.small-box-review {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  padding: 50px;
+}
+
+.image-review {
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  padding: 0;
+}
+
+@media screen and (min-width: 650px) {
+  .customer-review {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    /* align-items: center; */
+    height: 600px;
+    margin: 80px;
+  }
+  .h1-customer-review {
+    width: 350px;
+  }
+  .customer-review-text {
+    width: 300px;
+    font-size: 20px;
+  }
+  .image-section-customer-review {
+    width: 700px;
+  }
+  .image-customer-review {
+    height: 400px;
+  }
+  .big-box-review {
+    width: 70%;
+  }
+  .small-box-review {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+  }
+  .image-review {
+    width: 30%;
+  }
+}/*# sourceMappingURL=main.css.map */
