--- a/style.css
+++ b/style.css
@@ -305,9 +305,7 @@ h1 {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
-  background-color: #717171;
-}
+
 
 /* Fading animation */
 .fade {
@@ -816,17 +814,35 @@ color: white;
 }
 
 .topnav-center a {
+    position: relative;
     text-decoration: none;
     color: white;
     padding: 14px 16px;
 }
-    
-.topnav-center a:active {
-    background-color: #8B806f;
-    font-size: 16px;
-    font-weight: bold;
-    border-bottom: 2px solid #8b806f;
-} 
+
+/* Underline effect */
+.topnav-center a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 8px;
+    width: 100%;
+    height: 3px;
+    background-color: #ffffffd4;
+    transform: scaleX(0);
+    transform-origin: bottom left;
+    transition: transform 0.3s ease;
+}
+
+/* Hover underline */
+.topnav-center a:hover::after {
+    transform: scaleX(1);
+}
+
+/* Active page underline stays */
+.topnav-center a.active::after {
+    transform: scaleX(1);
+}
 
   .booking-form {
     flex-direction: row;        /* make all inputs in one line */
