--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ display: flex;
 justify-content: space-between; 
 align-items: center;
 padding: 0px;
-background-color: #1a1a1a;
+background-color: #000000;
 }
 
 .logo {
@@ -381,7 +381,7 @@ h1 {
 
 /* FOOTER SECTION */
 footer {
-  background-color: #1a1a1a;
+  background-color: #000000;
   color: white;
   padding: 20px;
 }
