--- a/main.css
+++ b/main.css
@@ -46,7 +46,7 @@
 }
 
 /* Form */
-form {
+.form-contact {
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -61,11 +61,11 @@ form {
   margin-top: 30px;
 }
 
-input {
+.input-contact {
   height: 40px;
 }
 
-select {
+.select.contact {
   height: 40px;
 }
 
@@ -87,7 +87,7 @@ textarea {
   .image-office-building {
     width: 100%;
   }
-  form {
+  .form-contact {
     width: 20%;
   }
   hr {
