--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,12 @@
+@use 'buttons';
+
+
+
+
 //Sparade värden och styling
 @import "variables";
 
 //Sidtyper
 @import "contact";
 @import "reference";
+
