changed text color

--- a/main.css
+++ b/main.css
@@ -133,7 +133,7 @@ textarea {
 }
 
 .customer-review-text {
-  color: white;
+  color: black;
   font-weight: 100;
   line-height: 130%;
   width: 55%;
