--- a/_reference.scss
+++ b/_reference.scss
@@ -77,7 +77,8 @@
 }
 
 .image-review {
-    height: auto;
+    width: 90%;
+    /* height: auto; */
     display: block;
     margin: 0 auto;
     padding: 0;
