--- a/style.css
+++ b/style.css
@@ -105,8 +105,14 @@ display: none;
   border-radius: 0.4rem;
   font-size: 1rem;
   font-family: inherit;
-  color: #808080;
+  color: #000000;
   cursor: pointer;
+}
+
+
+  input::placeholder {
+  color: black;          /* Change placeholder text to black */
+  opacity: 1;            /* Ensure it’s not faded (some browsers dim it by default) */
 }
 
 /* CTA BOOK button */
@@ -446,17 +452,17 @@ footer {
   height: 36px;
   width: 100%;
   border: none;
-  background-color: rgb(206, 205, 205);
+  background-color: white;
   text-align: center;
 }
 
 .form-footer input::placeholder {
-  color: black;
+  color: #000000;
 }
 
 #button-footer {
-  background-color: #8c8c8c;
-  color: white;
+  background-color: white;
+  color: #000000;
   border-radius: 10px;
   border: none;
   width: 100%;
